--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,22 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="DevPie Client is an experimental performance tool to manage client apps and automate payments, currently in Pre-alpha release stage"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="devpie, design, development, mobile developement, app developement, digital transformation, design sprints, product management, new york, berlin, scrum, agile"
+    />
+    <meta name="author" content="DevPie" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
